--- a/app/assets/stylesheets/web/ost/partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/partners/Partners.scss
@@ -10,7 +10,6 @@
   background-color: $azure;
   .custom-form{
     font-weight: $font-weight-normal;
-    max-width: 350px;
   }
 
   :focus {
@@ -20,6 +19,7 @@
   label{
     font-size: 0.875rem;
     color: $shakespeare;
+    margin-bottom: .2rem;
   }
 
   .input-container {
@@ -40,7 +40,7 @@
     border-bottom: 1px solid $powder-blue;
   }
 
-  .input ~ .border {
+  .input ~ .input-border {
     position: absolute;
     bottom: 0;
     left: 0;
@@ -49,9 +49,17 @@
     background-color: $neptune;
   }
 
-  .input:focus ~ .border {
+  .input:focus ~ .input-border {
     width: 100%;
     transition: 0.5s;
+  }
+
+  .error{
+    font-size: 12px;
+    color: #e7003b;
+    padding: 2px 0;
+    display: block;
+    min-height: 20px;
   }
 }
 
