--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -211,8 +211,11 @@
                        name: "Deepesh Kumar Nath",
                        title: "Director, Mobile Development",
                        image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Deepesh.png",
-                       linkedIn: 'https://www.linkedin.com/in/deepeshkumarnath/',
-                       description: "Deepesh has 10 years of solid IT  experience in e-Commerce, retail and Financial domain. Currently designated as Director, Mobile Development and leading iOS team from past 2.6 years he is  always updated with new and upcoming technologies and keen to learn more."
+                       linkedIn: "https://www.linkedin.com/in/deepeshkumarnath/",
+                       description: "Deepesh has 10 years of solid IT experience in e-Commerce, retail and Financial domain.
+                                     Currently designated as Director, Mobile Development and leading iOS team from past 2.6 years he is
+                                     always updated with new and upcoming technologies and keen to learn more."
+
                    },
                    {
                        name: "Aniket Ayachit",
@@ -229,63 +232,8 @@
                        linkedIn: 'https://www.linkedin.com/in/sachin-chauhan-a1bba981/',
                        description: "Sachin is a mobile application developer working as an Android developer in the team. He has proficiency in designing UI for android applications. He has interests in Competitive programming and likes to solve challenging programming questions and also he is an active stock market trader."
                    },
-                   {
-                       name: "Yogesh Sawant",
-                       title: "QA Engineer",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Yogesh-Sawant-v1.jpg",
-                       linkedIn: 'https://www.linkedin.com/in/yogesh-sawant-819872ba/',
-                       description: "Yogesh Sawant is a startup enthusiast with experience in testing mobile applications and web applications. He is product QA, an expert in Testing Methodologies and Product life cycles. Yogesh knows what needs to be done to make application user friendly."
-                   },
-                   {
-                       name: "Ira Merchant",
-                       title: "Recruiting Director",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Ira-Merchant-1.png",
-                       linkedIn: 'https://www.linkedin.com/in/iramerchant/',
-                       description: "Ira is an experienced talent acquisition professional. Ira has been with working on our team in Pune since 2012. Her experience and forte lie in her ability to help organisations scale rapidly while innovating recruitment practices that strengthen the people experience. She has a hands-on, action oriented approach to work."
-                   },
-                   {
-                       name: "Francis Dufour",
-                       title: "Community Manager",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francis-Dufour.png",
-                       linkedIn: 'https://www.linkedin.com/in/francis-dufour-25357960/',
-                       description: "Francis is OST community manager and the success and strength of OST's community is the center of his attention. Since 2012 Francis has been involved in crypto-economics and blockchain techology. Francis is based in Montreal, Canada."
-                   },
-                   {
-                       name: "Ashfaq Bhojani",
-                       title: "Administration Director",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Ashfaq-Bhojani.png",
-                       linkedIn: 'https://www.linkedin.com/in/ashfaq-bhojani-842b136/',
-                       description: "Ashfaq is an experienced professional with experience in Operations Management including Facilities, Administration, Travel, Hospitality & HR across industries such as IT/ITES, Healthcare & Hospitality. With his expertise, experience & energy, Ashfaq provides strategic & tactical support critical to ensure smooth OST business operations."
-                   },
-                   {
-                       name: "Wilson Chia",
-                       title: "Community Manager",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/wilson-chia.png",
-                       linkedIn: 'https://www.linkedin.com/in/chiawilson',
-                       description: "Wilson is a community manager and a cryptocurrency enthusiast. As a community manager, he seeks to share knowledge about OST in a concise and meaningful manner. Wilson is also passionate about analytics projects and deriving insights from data. Wilson is based in Singapore."
-                   },
-                   {
-                       name: "Santhosh Reddy",
-                       title: "Software Engineer",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Santhosh-Reddy.jpg",
-                       linkedIn: 'https://www.linkedin.com/in/santhosh-r3/',
-                       description: "Santhosh is a startup and technology enthusiast. He joined the team as a Backend developer. He earned a degree from NIT Durgapur and always keen to learn new things. In his leisure time, Santhosh participates in online programming contests and was ranked among the top 1000 programmers on Codechef in many contests."
-                   },
-                   {
-                       name: "Ashutosh Lodhi",
-                       title: "Senior Software Engineer",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Ashutosh-Lodhi.jpg",
-                       linkedIn: 'https://www.linkedin.com/in/ashutosh-lodhi-14287352/',
-                       description: "Ashutosh is a senior software engineer with 4+ years of experience in building scalable and responsive websites. He has expertise in Javascript & Frontend frameworks. He holds Bachelor's Degree in Computer Science from Pune University."
-                   },
-                   {
-                       name: "Somashekhar Mulimani",
-                       title: "Principal QA Engineer",
-                       image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Somashekhar-Mulimani.jpg",
-                       linkedIn: 'https://www.linkedin.com/in/somashekhar-mulimani-85198214/',
-                       description: "Soma is a QA Evangelist with hands on experience in Web and mobile Application Testing. He is also extremely passionate about ensuring a smooth user experience and very particular about delivering a high quality end product."
-                   }
-               ]
+
+               ];
 
             %>
 
