--- a/app/views/web/ost/terms.html.erb
+++ b/app/views/web/ost/terms.html.erb
@@ -82,7 +82,8 @@
 
       <h5 class="mt-4 pt-2">Privacy</h5>
       <p>
-        We will manage any personal information that we collect through our website in accordance with our <a href="<%= GlobalConstant::Base.company_other_product_urls['root_url'] %>privacy">Privacy Policy, which you can access here</a>.
+        We will manage any personal information that we collect through our website in accordance with our
+        <strong><a href="/privacy">Privacy Policy, which you can access here</a>.</strong>
       </p>
 
       <h5 class="mt-4 pt-2">Governing law</h5>
