--- a/app/views/web/ost/terms.html.erb
+++ b/app/views/web/ost/terms.html.erb
@@ -83,7 +83,7 @@
       <h5 class="mt-4 pt-2">Privacy</h5>
       <p>
         We will manage any personal information that we collect through our website in accordance with our
-        <strong><a href="/privacy">Privacy Policy, which you can access here</a>.</strong>
+        <a href="/privacy" style="font-weight: 600;">Privacy Policy, which you can access here</a>.
       </p>
 
       <h5 class="mt-4 pt-2">Governing law</h5>
@@ -99,5 +99,3 @@
   </div>
 
 </div>
-
-<%= render :partial => "/shared/web/common/index_svg_sprite" %>
