--- a/app/assets/stylesheets/web/ost/index/Jumbotron.scss
+++ b/app/assets/stylesheets/web/ost/index/Jumbotron.scss
@@ -210,3 +210,45 @@ h1, h2, h3, h4, h5, h6{
       vertical-align: middle;
     }
   }
+
+.text-link{
+  color: #e4b030!important;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 0.8rem;
+  letter-spacing: 4px;
+  display: inline-block;
+  position: relative;
+  padding: 10px 0;
+  &:hover{
+    text-decoration: none;
+    outline: none;
+    &:before, &:after{
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      transform: scale(1);
+    }
+    &:after{
+      top: 0%;
+      opacity: 1;
+    }
+  }
+  &:before, &:after{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    background: #e4b030;
+    content: '';
+    -webkit-transition: -webkit-transform 0.3s;
+    -moz-transition: -moz-transform 0.3s;
+    transition: transform 0.3s;
+  }
+  &:after{
+    opacity: 0;
+    -webkit-transition: top 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+    -moz-transition: top 0.3s, opacity 0.3s, -moz-transform 0.3s;
+    transition: top 0.3s, opacity 0.3s, transform 0.3s;
+  }
+}
