--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -194,16 +194,16 @@ $sizes: map-merge((
 // Settings for the `<body>` element.
 
 $body-bg:                   $white !default;
-$body-color:                $gray-900 !default;
+$body-color:                $blue-800 !default;
 
 // Links
 //
 // Style anchor elements.
 
-$link-color:                theme-color("primary") !default;
+$link-color:                $blue-800 !default;
 $link-decoration:           none !default;
-$link-hover-color:          darken($link-color, 15%) !default;
-$link-hover-decoration:     underline !default;
+$link-hover-color:          $yellow-500 !default;
+$link-hover-decoration:     none !default;
 
 // Paragraphs
 //
@@ -297,7 +297,7 @@ $font-weight-200:             200 !default;  //customized
 $font-weight-500:             500 !default;  //customized
 $font-weight-600:             600 !default;  //customized
 
-$font-weight-base:            $font-weight-normal !default;
+$font-weight-base:            $font-weight-light !default;
 $line-height-base:            1.5 !default;
 
 $h1-font-size:                $font-size-base * 2.75 !default;
