--- a/app/views/layouts/ost.erb
+++ b/app/views/layouts/ost.erb
@@ -88,6 +88,7 @@
   <%= yield %>
   <%= render :partial => "/shared/web/common/footer_links" %>
   <%= render :partial => "/shared/web/common/footer" %>
+  <%= render :partial => "/shared/web/common/index_svg_sprite" %>
 </main>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
