--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -16,7 +16,7 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item dropdown nav-products">
-          <a class="nav-link dropdown-toggle d-flex" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle d-flex" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Products
           </a>
           <ul class="dropdown-menu mega-dropdown-menu">
@@ -41,7 +41,7 @@
           </ul>
         </li>
         <li class="nav-item dropdown nav-products">
-          <a class="nav-link dropdown-toggle d-flex" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle d-flex" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Developers
           </a>
           <ul class="dropdown-menu mega-dropdown-menu">
@@ -88,7 +88,7 @@
           </ul>
         </li>
         <li class="nav-item dropdown nav-products">
-          <a class="nav-link dropdown-toggle d-flex" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle d-flex" href="javascript:void(0)" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Company
           </a>
           <ul class="dropdown-menu mega-dropdown-menu">
@@ -119,7 +119,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-blog-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">blog</span>
+                <span class="pl-2">Blog</span>
               </a>
             </li>
             <li>
@@ -129,7 +129,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-news-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">news</span>
+                <span class="pl-2">News</span>
               </a>
             </li>
             <li>
@@ -139,7 +139,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-careers-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">careers</span>
+                <span class="pl-2">Careers</span>
               </a>
             </li>
             <li>
@@ -149,7 +149,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-support-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">support</span>
+                <span class="pl-2">Support</span>
               </a>
             </li>
             <li>
@@ -159,7 +159,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-documents-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">documents</span>
+                <span class="pl-2">Documents</span>
               </a>
             </li>
             <li>
@@ -169,7 +169,7 @@
                     <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-token-sale-icon"></use>
                   </switch>
                 </svg>
-                <span class="pl-2">token sale</span>
+                <span class="pl-2">Token Sale</span>
               </a>
             </li>
           </ul>
