--- a/app/assets/stylesheets/web/ost/team/About.scss
+++ b/app/assets/stylesheets/web/ost/team/About.scss
@@ -127,3 +127,11 @@
     margin: 50px auto 0;
   }
 }
+
+
+@media (max-width: map-get($grid-breakpoints, "lg") ) {
+  .security-content-wrap {
+    text-align:  center ;
+    margin-top: 1.25rem;
+  }
+}
