--- a/app/views/web/ost/partners/_contact_us.erb
+++ b/app/views/web/ost/partners/_contact_us.erb
@@ -8,7 +8,7 @@
         </div>
       </div>
       <div class="row">
-        <form action="/api/home/contact-us-partners" class="custom-form col-10 col-sm-6 mx-auto" id="partners-contact-us-form">
+        <form action="/api/home/contact-us-partners" class="custom-form col-10 col-lg-8 col-xl-6  mx-auto" id="partners-contact-us-form">
           <div class="input-container">
             <label>FULL NAME</label>
             <input class="input" id="full_name" type="text" name="full_name" value="" title="full name" required autocomplete="off" />
