1. Partners Page - TOP CTAs collapsing on Mobile 2. Partners Page - Confirmation Box on Contact Us submission is of different color than the one on Homepage 3. uberbanner click on HP still opening in target _blank

--- a/app/assets/stylesheets/web/ost/partners/Partners.scss
+++ b/app/assets/stylesheets/web/ost/partners/Partners.scss
@@ -68,7 +68,7 @@
   width: 100%;
   .send-message-success{
     border-radius: $border-radius-lg;
-    background: $skeptic;
+    background: $cyan;
     color: $white;
     .small-title{
       text-transform: uppercase;
