--- a/app/views/shared/web/common/_uber_banner.erb
+++ b/app/views/shared/web/common/_uber_banner.erb
@@ -1,5 +1,5 @@
 <div class="text-center">
-  <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="uber-banner d-block" title="OST Kit Alpha" target="_blank">
+  <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="uber-banner d-block" title="OST Kit Alpha">
     <svg class="icon-megaphone">
       <switch>
         <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-megaphone"></use>
