adding a  new position for HK location

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -96,6 +96,11 @@
                 description: "OST “Simple Token” is looking for a business development team lead with a strong analytical consultative approach and passion for blockchain technology and crypto-currencies to join our growing team. This is an exciting opportunity to drive market development, sales and partnerships within a dynamic team for one of the fastest growing Blockchain companies.",
             },
             {
+                profile: "Blockchain Community Manager",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1gsldxce320BG1zQYilNVHg-&embedsource=Embed",
+                description: "Community managers are on the front lines as representatives of the company in social media channels. We want to mobilise our community of developers, prospects, and beta users to become evangelists for OST and build new products based on our OpenST protocol. This will involve actively encouraging people to share their experiences of developing on our platform and how they can work together to collectively overcome some of the early challenges and complexities. We’re looking for leader for our community team who is passionate about blockchain and cryptocurrency, and who wants to share and tell the OST story with the world.",
+            },
+            {
                 location: "New York",
                 profile: "Blockchain Strategy Consultant",
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1m@NfmE1DD2AxoGQv7.28N8-&embedsource=Embed",
