google site verification for ost web

--- a/app/views/layouts/ost.erb
+++ b/app/views/layouts/ost.erb
@@ -8,6 +8,7 @@
   <meta name="description" content="<%= @page_meta_data[:description] %>">
   <meta name="keywords" content="<%= @page_meta_data[:keywords] %>">
   <meta name="robots" content="<%= @page_meta_data[:robots] %>">
+  <meta name="google-site-verification" content="HXVSECDp1rMChIwEQ2pT9ti4NUHd7yAvXz8sQvvhyFw" />
   <% if @page_meta_data[:canonical].present? %>
     <link rel="canonical" href="<%= @page_meta_data[:canonical] %>" />
   <% end %>
