team page updates

--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -47,6 +47,13 @@
                                 description: "Renee Wong is seasoned financial strategist with 10+ years experiene as CFO and General Manager in high growth businesses. Her previous experience includes executive and financial leadership roles at Dashlane, Fab.com, and Pop Sugar."
                             },
                             {
+                                name: "Adeola Ogunwole",
+                                title: "Vice President of Marketing",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Adeola-Ogunwole.png",
+                                linkedIn: 'https://www.linkedin.com/in/adeolaogunwole/',
+                                description: "Adeola Ogunwole is a marketing executive, former founder and math nerd obsessed with answering “what”, “why” and “how” through data-driven narratives rooted in customer insights. She brings over 15 years experience leading global marketing teams. Her previous roles include senior marketing and strategy roles at Hult International Business School, Apollo Education, Quinstreet, and General Mills."
+                            },
+                            {
                                 name: "Jason Banks",
                                 title: "Lead Blockchain Engineer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Jason-Banks.png",
@@ -63,6 +70,13 @@
                                 twitter: 'https://twitter.com/paulduplessis/',
                                 medium: 'https://medium.com/@pauldups/',
                                 description: "Paul J du Plessis has 10 years experience building technology for enterprises and growing startups in fintech, insuretech and blockchain technology. Paul joins Simple Token as the business development lead working closely with the member companies launching their own branded tokens on the Simple Token network of networks. You can find Paul in Berlin, Germany and Pune, India."
+                            },
+                            {
+                                name: "Francesco Pacella",
+                                title: "Director Product Managment",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francesco-Pacella.png",
+                                linkedIn: 'https://www.linkedin.com/in/francescopacella/',
+                                description: "Francesco "Frankie" Pacella is a Product and Marketing Manager with 5 years of experience. He developed and scaled a number of projects and companies on the tech scene across Europe and Asia focusing on growth, engagement, monetization, and analytics."
                             },
                             {
                                 name: "Wouter Verhoog",
@@ -84,13 +98,6 @@
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Abhaykumar-Singh.png",
                                 linkedIn: 'https://www.linkedin.com/in/abhay-kumar-15156316/',
                                 description: "Abhay is a Senior Principal Software Engineer. He has experience in full stack development developing Web based SAAS Applications with all facets of SDLC (Software Development Life Cycle) like Requirements Analysis, System Design, Development, Deployment, Code Review, Website Scaling. He is proficient with Ruby, Ruby On Rails, Mysql, Amazon Web Services in building web applications."
-                            },
-                            {
-                                name: "Francesco Pacella",
-                                title: "Director Product Management",
-                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francesco-Pacella.png",
-                                linkedIn: 'https://www.linkedin.com/in/francescopacella/',
-                                description: "Francesco Pacella is a Product and Marketing Manager with 5 years of experience. He developed and scaled a number of projects and companies on the tech scene across Europe and Asia focusing on growth, engagement, monetization, and analytics."
                             },
                             {
                                 name: "Prineel Bandellu",
@@ -159,6 +166,13 @@
                                 description: "Aman Barbaria is a senior software engineer with 3 years of working experience in the e-commerce industry. He is passionate towards building consumer facing products. A strong engineering professional with a Bachelor's Degree in Computer engineering from Pune University."
                             },
                             {
+                                name: "Juhi Vibhakar",
+                                title: "User Experience Designer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Juhi-Vibhakar.png",
+                                linkedIn: 'https://www.linkedin.com/in/juhivibhakar/',
+                                description: "Juhi is a UX Designer who finished her Masters at the University of St Andrews in 2017. She’s passionate about creating usable workflows and improving digital design experiences. As an avid traveller she's always planning her next getaway, or perched up somewhere to take a stunning photograph. Her other interests include trying her hand at new dishes and reading fiction literature."
+                            },
+                            {
                                 name: "Pranay Valson",
                                 title: "Blockchain Technology Manager",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Pranay-Valson.jpg",
@@ -201,6 +215,13 @@
                                 description: "Puneet graduated from Birla Institute Of Technology & Science, Pilani Campus with a bachelor's degree in InformationSystems in May, 2013. He is currently working as a Senior Software Developer with Pepo. Specialties: Ruby On Rails"
                             },
                             {
+                                name: "Marina Antonova",
+                                title: "Business Development Manager",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Marina-Antonova.png",
+                                linkedIn: 'https://www.linkedin.com/in/marinaantonova/',
+                                description: "Marina has 7 years of experience in Business Development and Partner Management in IT and Mobile Marketing industries. She enjoys exploring cities by bike and playing the piano."
+                            },
+                            {
                                 name: "Pankaj Keswani",
                                 title: "Principal Software Engineer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Pankaj-Keswani.png",
@@ -212,9 +233,7 @@
                                 title: "Director, Mobile Development",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Deepesh.png",
                                 linkedIn: 'https://www.linkedin.com/in/deepeshkumarnath/',
-                                description: "Deepesh has 10 years of solid IT experience in e-Commerce, retail and Financial domain.
-                                              Currently designated as Director, Mobile Development and leading iOS team from past 2.6 years he is
-                                              always updated with new and upcoming technologies and keen to learn more."
+                                description: "Deepesh has 10 years of solid IT experience in e-Commerce, retail and Financial domain. Currently designated as Director, Mobile Development and leading iOS team from past 2.6 years he is always updated with new and upcoming technologies and keen to learn more."
                             },
                             {
                                 name: "Aniket Ayachit",
@@ -286,7 +305,22 @@
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Somashekhar-Mulimani.jpg",
                                 linkedIn: 'https://www.linkedin.com/in/somashekhar-mulimani-85198214/',
                                 description: "Soma is a QA Evangelist with hands on experience in Web and mobile Application Testing. He is also extremely passionate about ensuring a smooth user experience and very particular about delivering a high quality end product."
-                            }];
+                            },
+                            {
+                                name: "Mayur Patil",
+                                title: "Software Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Mayur-Patil.png",
+                                linkedIn: 'https://www.linkedin.com/in/mayur-patil-21b2a8122/',
+                                description: "Mayur is a Front-End developer who previously worked as a Full Stack developer. He is passionate about building applications using Python and Front-End technologies. Mayur holds a Bachelor of Engineering degree from the University of Pune."
+                            },
+                            {
+                                name: "Anna Balog",
+                                title: "Office Manager",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Anna-Balog.png",
+                                linkedIn: 'www.linkedin.com/in/anna-balog-0b2132b8',
+                                description: "Anna has a lot of experience in tourism and customer service: At OST she puts these quaities to work to support the Berlin team in their daily operations, from travel arrangements to general administrative support."
+                            }
+                            ];
 
             %>
 
