team page updates

--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -76,7 +76,7 @@
                                 title: "Director Product Managment",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francesco-Pacella.png",
                                 linkedIn: 'https://www.linkedin.com/in/francescopacella/',
-                                description: "Francesco "Frankie" Pacella is a Product and Marketing Manager with 5 years of experience. He developed and scaled a number of projects and companies on the tech scene across Europe and Asia focusing on growth, engagement, monetization, and analytics."
+                                description: 'Francesco "Frankie" Pacella is a Product and Marketing Manager with 5 years of experience. He developed and scaled a number of projects and companies on the tech scene across Europe and Asia focusing on growth, engagement, monetization, and analytics.'
                             },
                             {
                                 name: "Wouter Verhoog",
@@ -319,7 +319,7 @@
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Anna-Balog.png",
                                 linkedIn: 'www.linkedin.com/in/anna-balog-0b2132b8',
                                 description: "Anna has a lot of experience in tourism and customer service: At OST she puts these quaities to work to support the Berlin team in their daily operations, from travel arrangements to general administrative support."
-                            }
+                            },
                             ];
 
             %>
