CO-21 : Website changes 11-Apr bf new KIT prod push

--- a/app/views/web/ost/index/_blockchain_toolkit.erb
+++ b/app/views/web/ost/index/_blockchain_toolkit.erb
@@ -8,10 +8,7 @@
       </svg>
       <h1>The Complete Blockchain Toolkit for Business</h1>
       <p>
-        OST KIT gives you all the tools you need to run your blockchain-powered economy on open scalable sidechains. Launch your own Branded Token without the ICO drama.
-      </p>
-      <p>
-        Introducing OST KIT⍺ Phase II: Developers Proof of Concept. Sign up now!
+        OST KIT gives you all the tools you need to run your blockchain-powered economy on open scalable sidechains. Launch your own Branded Token without the ICO drama. Visit the OST KIT page to login for Alpha II or to sign up for the third phase!
       </p>
       <ul class="list-unstyled">
         <li class="clearfix">
