--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -5,7 +5,7 @@
       <div class="col-md-12 col-lg-6">
         <h2>Connect to The Utility Blockchain</h2>
         <p class="mt-3">
-          The OST software platform helps businesses gain competitive advantage with blockchain. OST KIT⍺ Phase II, our complete blockchain management toolkit, is open for Developers: Start creating real Proofs of Concept!
+          The OST suite helps businesses gain competitive advantage with blockchain. OST KIT is our complete blockchain toolkit, now in its second Alpha phase. We'll be showcasing real Developer Proofs of Concept soon!
         </p>
         <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Discover OST KIT⍺">Discover OST KIT⍺</a>
         <a href="#developerresources" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Developer Resources">Developer Resources</a>
