--- a/app/views/web/ost/index/_jumbotron.erb
+++ b/app/views/web/ost/index/_jumbotron.erb
@@ -13,7 +13,7 @@
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
         <div class="illustration w-100">
-          <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/f6N3uKMzasI">
+          <div class="btn-secondary btn btn-play" title="Watch Intro" data-toggle="modal" data-target="#helpVideoModal" data-src="https://www.youtube.com/embed/yJswJcnLYpU">
             <div class="play align-middle">
               <svg class="svg">
                 <switch>
@@ -21,7 +21,7 @@
                 </switch>
               </svg>
             </div>
-            <span class="align-middle">ost kit Intro</span>
+            <span class="align-middle">Watch Intro</span>
           </div>
           <img src="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-1x.png" srcset="https://dxwfxs8b4lg24.cloudfront.net/ost/images/ost-hero-illustration-2x.png 1000w" class="img-fluid position-relative" alt="Simple Token Play Video"/>
         </div>
