new position for berlin location

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -75,6 +75,11 @@
                 description: "OST “Simple Token”  is looking for Director of Human Resources to help us build' the best blockchain company to work at. A workplace where everyone loves their job, enjoys coming to work, respects and appreciates their colleagues, and where everyone is constantly challenged, learning and growing.",
             },
             {
+                profile: "Customer Support Lead",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1qWWqEJV.jswK7ABaAamHmE-&embedsource=Embed",
+                description: "The Customer Support lead will be the front lines as representative of the company for any product related questions and technical guidance. You will be responsible for the troubleshooting of client issues, improving customer support processes and building relationships with our customer base.This will involve actively responding to people as they share their experiences of developing on our platform and gathering feedback on suggested new features or bugs that may impact our overall product roadmap. This is a great chance to immerse yourself in a developing blockchain product and take a pivotal role in building our customer support function as well as influencing the overall customer journey.",
+            },
+            {
                 location: "Hong Kong",
                 profile: "Blockchain Community Manager",
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1gsldxce320BG1zQYilNVHg-&embedsource=Embed",
