News Page to be taken offline

--- a/app/views/shared/web/common/_navbar.erb
+++ b/app/views/shared/web/common/_navbar.erb
@@ -122,16 +122,16 @@
                 <span class="pl-2">Blog</span>
               </a>
             </li>
-            <li>
-              <a href="<%= GlobalConstant::Base.root_url %>news" class="nav-svg-link d-flex" title="News">
-                <svg class="nav-svg">
-                  <switch>
-                    <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-news-icon"></use>
-                  </switch>
-                </svg>
-                <span class="pl-2">News</span>
-              </a>
-            </li>
+            <!--<li>-->
+              <!--<a href="<%#= GlobalConstant::Base.root_url %>news" class="nav-svg-link d-flex" title="News">-->
+                <!--<svg class="nav-svg">-->
+                  <!--<switch>-->
+                    <!--<use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#dropdown-news-icon"></use>-->
+                  <!--</switch>-->
+                <!--</svg>-->
+                <!--<span class="pl-2">News</span>-->
+              <!--</a>-->
+            <!--</li>-->
             <li>
               <a href="<%= GlobalConstant::Base.root_url %>careers" class="nav-svg-link d-flex" title="Careers">
                 <svg class="nav-svg">
