--- a/app/views/shared/web/common/_footer_links.erb
+++ b/app/views/shared/web/common/_footer_links.erb
@@ -27,7 +27,7 @@
             <li><a href="<%= GlobalConstant::Base.root_url %>team" title="Team">Team</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>partners" title="Partners">Partners</a></li>
             <li><a href="https://medium.com/ostdotcom" target="_blank" title="Blog">Blog</a></li>
-            <li><a href="<%= GlobalConstant::Base.root_url %>news" title="News">News</a></li>
+            <!--<li><a href="<%#= GlobalConstant::Base.root_url %>news" title="News">News</a></li>-->
             <li><a href="<%= GlobalConstant::Base.root_url %>careers" title="Careers">Careers</a></li>
             <li><a href="https://help.ost.com" target="_blank" title="Support">Support</a></li>
             <li><a href="<%= GlobalConstant::Base.root_url %>documents" title="Documents">Documents</a></li>
