--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -76,6 +76,12 @@
                 description: "Community managers are on the front lines as representatives of the company in social media channels. We want to mobilise our community of developers, prospects, and beta users to become evangelists for OST and build new products based on our OpenST protocol. This will involve actively encouraging people to share their experiences of developing on our platform and how they can work together to collectively overcome some of the early challenges and complexities. We’re looking for leader for our community team who is passionate about blockchain and cryptocurrency, and who wants to share and tell the OST story with the world.",
             },
             {
+                location: "New York",
+                profile: "General Counsel",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1gEkSpnZEm.2ma3VBpJNblo-&embedsource=Embed",
+                description: "OST is looking for a top-notch, innovative and mission-driven General Counsel to add value to and support the OST blockchain project.  As the company’s first General Counsel, you will play an integral role across the organization’s global offices, advising and counselling OST’s leadership team on a broad range of legal matters and participate in critical decision-making.  You will be involved in all legal aspects, including but not limited to securities regulations compliance, corporate governance, IP protection, contracts with vendors and partners, and employment matters. The successful candidate will be a highly strategic, proactive attorney who is well-versed with complex business dynamics. This senior management position will report to our CFO and work closely with our Founder/CEO.  The position will be based out of our NYC office.",
+            },
+            {
                 location: "Pune, India",
                 profile: "Backend Developer ( Software Engineer & Senior Software Engineer)",
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1gjqmuiWj.9bYlTknmuZC4M-&embedsource=Embed",
