privacy page updates

--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -190,7 +190,7 @@
         After expiry of the retention periods, your Personal Data will be deleted. If there is any information that we are unable, for technical reasons, to delete entirely from our systems, we will put in place appropriate measures to prevent any further use of the data.
       </p>
 
-      <h5 class="mt-4 pt-2">7. International transfer of information collected: </h5>
+      <h5 class="mt-4 pt-2">7. INTERNATIONAL TRANSFER OF INFORMATION COLLECTED</h5>
       <p>
         Your Personal Data may be collected, transferred to and stored by us in the United States and by our affiliates in other countries where we operate.
       </p>
