privacy page updates

--- a/app/views/web/ost/privacy.html.erb
+++ b/app/views/web/ost/privacy.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-12">
       <h2 class="mt-4 mb-2">Privacy Policy</h2>
-
+      <p>Last Updated: May 24th, 2018</p>
       <h5 class="mt-4 pt-2">1. INTRODUCTION</h5>
       <p>
         We are OST.com Limited of Hong Kong and our company registration number is 2570554 (“OST.com Limited”, “we” or “us”). Your privacy is important to us. We are committed to protecting the privacy, confidentiality and security of information relating to individuals (“Personal Data”) that we hold by complying with the requirements under applicable laws and regulations. We are equally committed to ensuring that all our employees, service providers and agents uphold these obligations. This policy explains how we manage Personal Data within our organisation and your rights and choices regarding our processing of your Personal Data.
